--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,15 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "tasques.Main",
+            "projectName": "tasques",
+            "vmArgs": "-Dorg.slf4j.simpleLogger.defaultLogLevel=error -Dorg.slf4j.simpleLogger.log.org.mongodb.driver=error"
+
+        },
+        {
+            "type": "java",
             "name": "Current File",
             "request": "launch",
             "mainClass": "${file}"
