--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,7 @@
         <artifactId>exec-maven-plugin</artifactId>
         <version>3.1.0</version>
         <configuration>
-          <mainClass>tasques.App</mainClass>
+          <mainClass>tasques.Main</mainClass>
           <systemProperties>
             <systemProperty>
               <key>org.slf4j.simpleLogger.defaultLogLevel</key>
